src/main/java/com/example/clothingstore/utils/error/IdInvalidException.java
package com.example.clothingstore.utils.error;

public class IdInvalidException extends Exception {
    public IdInvalidException(String message) {
        super(message);
    }
}
